--- a/App1.csproj
+++ b/App1.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Assets\escapeRoomBackground.jpg" />
+    <None Remove="Assets\imageLogin.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,6 +44,11 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.250916003" />
   </ItemGroup>
   <ItemGroup>
+    <Page Update="LoginPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
     <Page Update="FirstQuestionPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -51,6 +57,9 @@
     <Page Update="HomePage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Window\" />
   </ItemGroup>
 
   <!--
