--- a/App1.csproj
+++ b/App1.csproj
@@ -15,6 +15,8 @@
   <ItemGroup>
     <None Remove="Assets\escapeRoomBackground.jpg" />
     <None Remove="Assets\imageLogin.png" />
+    <None Remove="Window\FinalQuestionPage.xaml" />
+    <None Remove="Window\SecondQuestionPage.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -44,6 +46,11 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.250916003" />
   </ItemGroup>
   <ItemGroup>
+    <Page Update="Window\FinalQuestionPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
     <Page Update="LoginPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -59,7 +66,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Window\" />
+    <Page Update="Window\SecondQuestionPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <!--
