--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,14 +1,10 @@
 {
   "profiles": {
-    "App1 (Package)": {
+    "ChatBox (Package)": {
       "commandName": "MsixPackage"
     },
-    "App1 (Unpackaged)": {
+    "ChatBox (Unpackaged)": {
       "commandName": "Project"
-    },
-    "WSL": {
-      "commandName": "WSL2",
-      "distributionName": ""
     }
   }
 }
