--- a/ChatBox.csproj
+++ b/ChatBox.csproj
@@ -44,10 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="ChatbotContractPlugin">
-      <HintPath>..\..\..\DemoLogger\ChatbotContractPlugin\bin\Debug\net8.0\ChatbotContractPlugin.dll</HintPath>
+      <HintPath>bin\x64\Debug\net8.0-windows10.0.19041.0\win-x64\AppX\ChatbotContractPlugin.dll</HintPath>
     </Reference>
     <Reference Include="TxtLoggerPlugin">
-      <HintPath>..\..\..\DemoLogger\TxtLoggerPlugin\bin\Debug\net8.0\TxtLoggerPlugin.dll</HintPath>
+      <HintPath>bin\x64\Debug\net8.0-windows10.0.19041.0\win-x64\AppX\TxtLoggerPlugin.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
